--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-css": "node-sass --include-path scss scss/index.scss css/traslated.css",
+    "build-css": "node-sass --include-path scss scss/index.scss css/index.css",
     "watch-css": "nodemon -e scss -x \"npm run build-css\""
   },
   "repository": {
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/JazminGaia/MentaYPeperina#readme",
   "devDependencies": {
+    "animate.css": "^4.1.1",
     "node-sass": "^7.0.1",
     "nodemon": "^2.0.19"
   }
